tmux: few tweaks

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -65,12 +65,12 @@ set -g mode-keys vi
 
 # Smoother scrolling with mouse in copy mode.
 # https://stackoverflow.com/a/46617618/1745064
-bind-key -T copy-mode-vi WheelUpPane send-keys -X scroll-up
-bind-key -T copy-mode-vi WheelDownPane send-keys -X scroll-down
+# bind-key -T copy-mode-vi WheelUpPane send-keys -X scroll-up
+# bind-key -T copy-mode-vi WheelDownPane send-keys -X scroll-down
 
 # Half-page scrolling with mouse in copy mode.
-# bind-key -T copy-mode-vi WheelUpPane send-keys -X halfpage-up
-# bind-key -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
+bind-key -T copy-mode-vi WheelUpPane send-keys -X halfpage-up
+bind-key -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
 
 # Use v in addition to SPC to begin copy-mode selection.
 bind-key -T copy-mode-vi v send-keys -X begin-selection
@@ -91,7 +91,8 @@ set -as terminal-overrides ',tmux-256color:Tc'
 set -g mouse on
 bind m set -g mouse
 
-# Do not change window name automatically once it is manually set
+# Enable automatic rename but do not change window name automatically once it is manually set
+set -g automatic-rename on
 set -g allow-rename off
 
 # Resize to smallest possible or smallest session size
@@ -106,7 +107,7 @@ set -g display-time 3000
 # Just send ESC.
 set -g escape-time 0
 
-# Emacs key bindings in tmux command prompt (C-a + :) are better than vi keys, even for vim users
+# Emacs key bindings in tmux command prompt (C-a + :) are better than vi keys, even for vi users
 set -g status-keys emacs
 
 # Renumber windows sequentially after closing any of them.
@@ -127,10 +128,11 @@ bind k select-pane -U
 bind l select-pane -R
 
 # Kill a pane. Confirm before killing.
+# Native: C-a x.
 bind C-k confirm kill-pane
 
 # Reload tmux config.
-bind r source ~/.tmux.conf \; display "Sourced .tmux.conf!"
+bind r source ~/.tmux.conf \; display "Sourced ~/.tmux.conf!"
 
 # Change default start directory.
 bind _ attach -c '#{pane_current_path}' \; display "Start directory changed to #{pane_current_path}."
@@ -138,8 +140,10 @@ bind _ attach -c '#{pane_current_path}' \; display "Start directory changed to #
 # Do not suspend-client
 unbind C-z
 
+# Set message style, i.e. C-a :
+set -g message-style fg=yellow,bg=black,bright
+
 # Set status bar style.
-set -g message-style fg=white,bg=black,bright
 set -g status-style fg=white,bg=default,bright
 
 # Set status bar size.
@@ -147,8 +151,8 @@ set -g status-left-length 40
 set -g status-right-length 65
 
 # Set status bar content.
-set -g status-left "#[fg=cyan]#H #[fg=colour242]• #[default]"
-set -g status-right "#{prefix_highlight} #{?window_zoomed_flag,🔍 ,}#{?mouse,,#[dim]🖱️:OFF}#[default]"
+set -g status-left "#[fg=cyan]#H #[fg=colour242]• "
+set -g status-right "#{prefix_highlight} #{?window_zoomed_flag,🔍 ,}#{?mouse,,#[dim]🖱️:OFF}"
 
 # Set non-active window title style.
 set -g window-status-format "#I:#W"
@@ -158,11 +162,11 @@ setw -g window-status-style fg=colour242,bg=default,dim
 set -g window-status-current-format "#I:#W"
 setw -g window-status-current-style fg=white,bg=default,bright
 
-# Make active pane more distinct.
-set -g pane-active-border-style fg=yellow,bg=default
-
 # Set bell style.
 set -g window-status-bell-style fg=red,bg=default,bright
+
+# Make active pane more distinct.
+set -g pane-active-border-style fg=yellow,bg=default
 
 # Load corp configs if any.
 if "[ -f ~/.tmux.conf_corp ]" 'source ~/.tmux.conf_corp'
