--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -135,7 +135,7 @@ bind C-k confirm kill-pane
 bind r source ~/.tmux.conf \; display "Sourced ~/.tmux.conf!"
 
 # Change default start directory.
-bind _ attach -c '#{pane_current_path}' \; display "Start directory changed to #{pane_current_path}."
+bind _ attach -c '#{pane_current_path}' \; display "Changed start directory to #{pane_current_path}."
 
 # Do not suspend-client
 unbind C-z
@@ -152,7 +152,7 @@ set -g status-right-length 65
 
 # Set status bar content.
 set -g status-left "#[fg=cyan]#H #[fg=colour242]• "
-set -g status-right "#{prefix_highlight} #{?window_zoomed_flag,🔍 ,}#{?mouse,,#[dim]🖱️:OFF}"
+set -g status-right "#{prefix_highlight} #{?window_zoomed_flag,🔍 ,}#{?mouse,,#[dim]mouse:off}"
 
 # Set non-active window title style.
 set -g window-status-format "#I:#W"
