--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -13,6 +13,7 @@ Host *
 	ServerAliveInterval 300
 
 	# Always start tmux, forcing unicode, attaching to and/or creating a session named "main".
+	# We cannot enable this in workstations otherwise git ssh authentication will fail.
 	# Chrome hterm equivalent: SSH arguments:
 	#   -t -- tmux -u new -A -s main
 	# RequestTTY yes
@@ -24,7 +25,6 @@ Host *
 	ControlPath ~/.ssh/controlmasters/%C
 	ControlPersist yes
 	ControlMaster auto
-
 
 # Load user scripts and functions if existing. Order is important.
 # Corp config is handled as part of .config.d.
