ssh: add public key: id_water

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -1,4 +1,5 @@
 # SSH Client config.
+# Public keys: https://github.com/thiagowfx.keys
 
 Host *
 	# Specifies whether keys should be automatically added to a running ssh-agent(1).
