--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -74,7 +74,7 @@ bind-key -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
 
 # Use v in addition to SPC to begin copy-mode selection.
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel  # alt: copy-selection
 
 # Start to count from 1 just like tiling window managers
 set -g base-index 1
