add goyo (distraction-free) shortcuts for tmux and vim

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -137,6 +137,9 @@ bind r source ~/.tmux.conf \; display "Sourced ~/.tmux.conf!"
 # Change default start directory.
 bind _ attach -c '#{pane_current_path}' \; display "Changed start directory to #{pane_current_path}."
 
+# Goyo, toggle status bar visibility for a distraction-free experience
+bind g set status
+
 # Do not suspend-client
 unbind C-z
 
