--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -175,31 +175,35 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
+set $bgcolor #526532
+set_from_resource $black i3.color0
+set_from_resource $green i3.color2
+set_from_resource $red i3.color3
+set_from_resource $white i3.color7
+set_from_resource $gray i3.color8
+
 # Start i3bar to display a workspace and status bar
 bar {
     status_command i3status
     position top
     workspace_min_width 20
 
-    # https://github.com/altdesktop/i3-style
-    # i3-style -o ~/.config/i3/config -r mate
     colors {
-        separator #aaaaaa
-        background #3c3b37
-        statusline #ffffff
+        background $black
+        statusline $white
 
-        focused_workspace #526532 #526532 #ffffff #282828
-        active_workspace #aea79f #aea79f #3c3b37 #928374
-        inactive_workspace #3c3b37 #3c3b37 #aea79f #928374
-        urgent_workspace #ff0000 #ff0000 #ffffff #ebdbb2
+        focused_workspace $bgcolor $bgcolor $white $black
+        active_workspace $gray $gray $black $gray
+        inactive_workspace $black $black $gray $gray
+        urgent_workspace $red $red $white $green
     }
 }
 
 # Theme colors
-client.focused #526532 #526532 #ffffff #a4cb64
-client.focused_inactive #aea79f #aea79f #3c3b37 #aea79f
-client.unfocused #3c3b37 #3c3b37 #aea79f #3c3b37
-client.urgent #ff0000 #ff0000 #ffffff #FF0000
+client.focused $bgcolor $bgcolor $white $green
+client.focused_inactive $gray $gray $black $gray
+client.unfocused $black $black $gray $black
+client.urgent $red $red $white $red
 
 # move to prev / next workspace on same display
 bindsym $mod+Shift+n workspace prev_on_output
