--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -20,7 +20,7 @@ font pango:monospace 8
 bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+Return exec i3-sensible-terminal
 
-# start the default web browser
+# launch the default web browser
 # https://github.com/i3/i3/issues/4468
 bindsym $mod+g exec gtk-launch "$(xdg-settings get default-web-browser)"
 
