--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,23 +32,27 @@
 # Set up tmux plug-in manager
 set -g @plugin 'tmux-plugins/tpm'
 
-# Copycat plugin
-#   C-a / to trigger search
-#   C-a C-f to copy a file
-#   C-a C-u to copy an URL
-set -g @plugin 'tmux-plugins/tmux-copycat'
+# Fingers plugin replaces tmux-copycat, tmux-fzf-url, tmux-fpp, it's all-in-one
+#   C-a f to trigger hints (files, URLs, etc)
+#     <no modifier>: copy
+#     ctrl: open
+#     shift: paste
+set -g @plugin 'Morantron/tmux-fingers'
+set -g @fingers-key f
+set -g @fingers-compact-hints '0'
+set -g @fingers-hint-position-nocompact 'left'
+
+# Free-form backward search a la tmux-copycat
+# https://github.com/tmux-plugins/tmux-copycat/issues/148
+bind / copy-mode \; send ?
+# URL search
+bind C-u copy-mode \; send -X search-backward "(https?://|git@|git://|ssh://|ftp://|file:///)[[:alnum:]?=%/_.:,;~@!#$&()*+-]*"
 
 # Add prefix highlight
 # Theme should invoke `#{prefix_highlight}` to display it
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-
-# Prefix highlight options
 set -g @prefix_highlight_show_copy_mode 'on'
 set -g @prefix_highlight_show_sync_mode 'on'
-
-# Facebook PathPicker
-#   C-a f to invoke fpp
-set -g @plugin 'tmux-plugins/tmux-fpp'
 
 # Prefix key
 set -g prefix C-a
@@ -67,13 +71,18 @@ set -g mode-keys vi
 # https://stackoverflow.com/a/46617618/1745064
 # bind-key -T copy-mode-vi WheelUpPane send-keys -X scroll-up
 # bind-key -T copy-mode-vi WheelDownPane send-keys -X scroll-down
-
+#
 # Half-page scrolling with mouse in copy mode.
 bind-key -T copy-mode-vi WheelUpPane send-keys -X halfpage-up
 bind-key -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
 
-# Use v in addition to SPC to begin copy-mode selection.
+# Use v ("visual mode") in addition to SPC to begin copy-mode selection.
 bind-key -T copy-mode-vi v send-keys -X begin-selection
+
+# Copy the entire line.
+bind-key -T copy-mode-vi Y send-keys Vy
+
+# Copy selection and exit copy-mode.
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel  # alt: copy-selection
 
 # Start to count from 1 just like tiling window managers
