ranger: misc tweaks

--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -7,5 +7,5 @@ set preview_images true
 # Draw borders around columns? (separators, outline, both, or none)
 set draw_borders separators
 
-# Show hidden files? You can toggle this by typing 'zh'.
+# Show hidden files. Shortcut: 'zh'.
 setlocal path=~/.dotfiles show_hidden true
