--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -12,16 +12,14 @@
 	smtpUser = tbperrotta@gmail.com
 
 [alias]
-	amend = commit --amend
+	amend = commit --amend --no-edit
 	dc = diff --cached
 	ignore = !curl -L -s https://www.gitignore.io/api/$@
+	l = log --graph --pretty=oneline --abbrev-commit --all  # log; there's also gitk and tig
 	st = status
 
-	# log; there's also gitk and tig
-	l = log --graph --pretty=oneline --abbrev-commit
-	xl = log --graph --decorate --all
-
-	# shelve (hg compatibility)
+	# hg compatibility
+	reword = commit --amend
 	shelve = stash
 	unshelve = stash apply
 
@@ -34,13 +32,12 @@
 	autosetuprebase = always
 
 [core]
-	# Auto-convert CRLF into LF when adding a file to the index, and vice-versa, when checking out code.
-	# Yields a transparent experience in Windows.
+	# Auto-convert CRLF <-> LF. Yields a transparent experience in Windows.
 	autocrlf = input
 	editor = vim
 
 [credential]
-	# Cache credentials in memory for a short period of time. See git-credential-cache[1] for details.
+	# Cache credentials in memory for a while. See git-credential-cache(1).
 	helper = cache
 
 # https://git-scm.com/docs/diff-config
