tmux/ssh tweaks

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -15,14 +15,14 @@ Host *
 
 	# Always start tmux, forcing unicode, attaching to and/or creating a session named "main".
 	# We cannot enable this in workstations otherwise git ssh authentication will fail.
-	# Chrome hterm equivalent: SSH arguments:
+	# hterm (chrome) equivalent ssh arguments:
 	#   -t -- tmux -u new -A -s main
 	# RequestTTY yes
 	# RemoteCommand tmux -u new -A -s main
 
-	# Keep this block last as it is not compatible with hterm in Chrome.
 	# Reuse SSH connection to speed up remote login process using multiplexing.
 	# https://en.wikibooks.org/wiki/OpenSSH/Cookbook/Multiplexing
+	# Keep this block last as it is not compatible with hterm (chrome).
 	ControlPath ~/.ssh/controlmasters/%C
 	ControlPersist yes
 	ControlMaster auto
