add global githooks dir
add last 5 commits to commit message template to increase consistency

https://codeinthehole.com/tips/enhancing-your-git-commit-editor/

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -35,6 +35,7 @@
 	# Auto-convert CRLF <-> LF. Yields a transparent experience in Windows.
 	autocrlf = input
 	editor = vim
+	hooksPath = ~/.githooks
 	pager = "(diff-highlight 2>/dev/null || cat) | ${PAGER:-less}"
 
 [credential]
