--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -74,10 +74,10 @@ for_window [class="Blueman|Lxappearance|Pavucontrol"] floating enable
 
 # spotify adjustments
 for_window [instance="crx_pjibgclleladliembfgfagdaldikeohf"] floating disable
-assign [instance="crx_pjibgclleladliembfgfagdaldikeohf"] → workspace number $ws9
+assign [instance="crx_pjibgclleladliembfgfagdaldikeohf"] → workspace number 9
 
 # music apps
-assign [class="Clementine"] → workspace number $ws9
+assign [class="Clementine"] → workspace number 9
 
 # use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
