add git message template
To make intent clearer.

$ git config --global commit.template ~/.git_commit_msg.txt

https://codeinthehole.com/tips/a-useful-template-for-commit-messages/

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -31,6 +31,9 @@
 	autosetupmerge = always
 	autosetuprebase = always
 
+[commit]
+	template = ~/.git_commit_msg.txt
+
 [core]
 	# Auto-convert CRLF <-> LF. Yields a transparent experience in Windows.
 	autocrlf = input
