i3 <-> sway: fix a few incompatibilities

--- a/i3/.config/i3/conf.d/i3.conf
+++ b/i3/.config/i3/conf.d/i3.conf
@@ -34,6 +34,9 @@ client.urgent $red $red $white $red
 # show window title icon
 for_window [all] title_window_icon on
 
+# restart i3 inplace (preserves layout/session, can be used to upgrade i3)
+bindsym $mod+Shift+r restart
+
 # multimedia music player keys: i3 only, not recognized by sway
 # present on Keychron K2 keyboard
 # https://github.com/swaywm/sway/issues/4783
