--- a/i3/.config/i3/conf.d/sway.conf
+++ b/i3/.config/i3/conf.d/sway.conf
@@ -4,7 +4,20 @@
 #   https://github.com/swaywm/sway/wiki
 #   https://github.com/swaywm/sway/wiki/Useful-add-ons-for-sway
 
+# Start i3bar to display a workspace and status bar
+bar {
+    status_command i3status
+    position top
+    workspace_min_width 25
+}
+
+# restart i3 inplace (preserves layout/session, can be used to upgrade i3)
+bindsym $mod+Shift+r exec sway reload
+
 # HiDPI
-output * scale 1.5
+output "*" scale 1.5
+
+# Wallpaper
+output "*" bg ~/.wallpaper fill
 
 # vim: ft=i3config
