ranger: map e to edit_file

--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -1,3 +1,5 @@
+# List all keybindings: '? k'.
+
 # Delete selection / files.
 alias remove delete
 
@@ -9,3 +11,6 @@ set draw_borders separators
 
 # Show hidden files. Shortcut: 'zh'.
 setlocal path=~/.dotfiles show_hidden true
+
+# Edit file: Set 'e' in addition to 'E'.
+map e edit_file
