tmux: add prefix K to kill-pane

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -139,6 +139,7 @@ bind l select-pane -R
 # Kill a pane. Confirm before killing.
 # Native: C-a x.
 bind C-k confirm kill-pane
+bind K confirm kill-pane
 
 # Reload tmux config.
 bind r source ~/.tmux.conf \; display "Sourced ~/.tmux.conf!"
