--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -22,6 +22,7 @@
 	reword = commit --amend
 	shelve = stash
 	unshelve = stash apply
+	unstash = stash apply
 	world = !git shelve && git pull --rebase && git unshelve
 
 [apply]
