simplify tmux, xresources

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,19 +33,15 @@
 set -g @plugin 'tmux-plugins/tpm'
 
 # Fingers plugin replaces tmux-copycat, tmux-fzf-url, tmux-fpp, it's all-in-one
-#   C-a f to trigger hints (files, URLs, etc)
-#     <no modifier>: copy
-#     ctrl: open
-#     shift: paste
+#   C-a f to trigger hints (files, URLs, etc) and copy
 set -g @plugin 'Morantron/tmux-fingers'
 set -g @fingers-key f
 set -g @fingers-compact-hints '0'
-set -g @fingers-hint-position-nocompact 'left'
 
-# Free-form backward search a la tmux-copycat
+# Free-form backward search a la tmux-copycat: C-a /
 # https://github.com/tmux-plugins/tmux-copycat/issues/148
 bind / copy-mode \; send ?
-# URL search
+# URL search: C-a C-u
 bind C-u copy-mode \; send -X search-backward "(https?://|git@|git://|ssh://|ftp://|file:///)[[:alnum:]?=%/_.:,;~@!#$&()*+-]*"
 
 # Add prefix highlight
