--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,7 +2,7 @@
 # https://github.com/tmux/tmux/wiki/FAQ
 #
 # Tmux initialization with SSH:
-#   -t -- tmux new -A -s main
+#   -t -- tmux -u new -A -s main
 #
 # Reload tmux config:
 #   C-a r
