tmux: add copy to tmux doc

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,6 +4,9 @@
 # Tmux initialization with SSH:
 #   -t -- tmux -u new -A -s main
 #
+# Copy to tmux:
+#   cmd | tmux loadb -
+#
 # Reload tmux config:
 #   C-a r
 #
