tmux: fix outdated comment

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -57,7 +57,7 @@ set -g @prefix_highlight_show_sync_mode 'on'
 set -g prefix C-a
 unbind C-b
 
-# C-a a and C-a C-a both go to beginning of line.
+# C-a a to go to beginning of line.
 bind a send-prefix
 
 # Go to last window.
