tmux: switch to C-z as prefix key

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,43 +8,43 @@
 #   cmd | tmux loadb -
 #
 # Reload tmux config:
-#   C-a r
+#   C-z r
 #
 # Plugin management:
-#   Install new plug-ins: C-a I
-#   Update all plug-ins: C-a U
-#   Uninstall old plug-ins: C-a Alt-u
+#   Install new plug-ins: C-z I
+#   Update all plug-ins: C-z U
+#   Uninstall old plug-ins: C-z Alt-u
 #
 # Hierarchy and terminology.
-#   Session (C-a s)
-#   \- Window (C-a w)
-#    \- Pane (C-a q)
+#   Session (C-z s)
+#   \- Window (C-z w)
+#    \- Pane (C-z q)
 #
 # List all commands:
 #   :list-commands
 #
 # List all keybindings:
-#   C-a ?
+#   C-z ?
 #   :list-keys
 #
 # Show option value:
 #   :show-options -g -s <name>
 #
-# Prefix is C-a.
+# Prefix is C-z.
 
 # Set up tmux plug-in manager
 set -g @plugin 'tmux-plugins/tpm'
 
 # Fingers plugin replaces tmux-copycat, tmux-fzf-url, tmux-fpp, it's all-in-one
-#   C-a f to trigger hints (files, URLs, etc) and copy
+#   C-z f to trigger hints (files, URLs, etc) and copy
 set -g @plugin 'Morantron/tmux-fingers'
 set -g @fingers-key f
 set -g @fingers-compact-hints '0'
 
-# Free-form backward search a la tmux-copycat: C-a /
+# Free-form backward search a la tmux-copycat: C-z /
 # https://github.com/tmux-plugins/tmux-copycat/issues/148
 bind / copy-mode \; send ?
-# URL search: C-a C-u
+# URL search: C-z C-u
 bind C-u copy-mode \; send -X search-backward "(https?://|git@|git://|ssh://|ftp://|file:///)[[:alnum:]?=%/_.:,;~@!#$&()*+-]*"
 
 # Add prefix highlight
@@ -53,15 +53,16 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @prefix_highlight_show_copy_mode 'on'
 set -g @prefix_highlight_show_sync_mode 'on'
 
-# Prefix key
-set -g prefix C-a
+# Prefix keys
+# set -g prefix2 C-a
+set -g prefix C-z
 unbind C-b
 
-# C-a a to go to beginning of line.
-bind a send-prefix
+# C-z z to send C-z underneath.
+bind z send-prefix
 
 # Go to last window.
-bind C-a last-window
+bind C-z last-window
 
 # Set vi mode keybindings. Mostly intended for copy mode.
 set -g mode-keys vi
@@ -95,7 +96,7 @@ set -g default-terminal 'tmux-256color'
 set -as terminal-overrides ',tmux-256color:Tc'
 
 # Enable mouse mode
-#   C-a m to toggle
+#   C-z m to toggle
 set -g mouse on
 bind m set -g mouse
 
@@ -115,7 +116,7 @@ set -g display-time 3000
 # Just send ESC.
 set -g escape-time 0
 
-# Emacs key bindings in tmux command prompt (C-a + :) are better than vi keys, even for vi users
+# Emacs key bindings in tmux command prompt (C-z :) are better than vi keys, even for vi users
 set -g status-keys emacs
 
 # Renumber windows sequentially after closing any of them.
@@ -136,7 +137,7 @@ bind k select-pane -U
 bind l select-pane -R
 
 # Kill a pane. Confirm before killing.
-# Native: C-a x.
+# Native: C-z x.
 bind C-k confirm kill-pane
 bind K confirm kill-pane
 
@@ -149,10 +150,7 @@ bind _ attach -c '#{pane_current_path}' \; display "Changed start directory to #
 # Goyo, toggle status bar visibility for a distraction-free experience
 bind g set status
 
-# Do not suspend-client
-unbind C-z
-
-# Set message style, i.e. C-a :
+# Set message style, i.e. C-z :
 set -g message-style fg=yellow,bg=black,bright
 
 # Set status bar style.
